--- a/content/tesis/tesis.bib
+++ b/content/tesis/tesis.bib
@@ -442,6 +442,64 @@ Las investigaciones sociológicas que analizan las causas de las atribuciones de
 \# Resumen}
 }
 
+@phdthesis{franetovic_desigualdad_2018,
+  type = {Magister en Sociología},
+  title = {Desigualdad, desarrollo económico y preferencias redistributivas en América Latina},
+  author = {Franetovic, Gonzalo},
+  year = {2018},
+  address = {Santiago de Chile},
+  abstract = {En una región en vı́as de desarrollo y altamente desigual como América Latina, resulta trascendental la comprensión de los determinantes que afectan en el acuerdo de las personas con la redistribución de recursos. La popular hipótesis del votante mediano y las teorı́as centradas en el autointerés continuamente han establecido un vı́nculo negativo entre el ingreso de las personas y su apoyo hacia la disminución de desigualdades. A pesar de ello, la evidencia es escasa y a veces contradictoria, mientras que su testeo en Latinoamérica resulta casi inexistente. Utilizando infor- mación de la Encuesta LAPOP entre los años 2008 y 2014, junto a datos para paı́ses, esta investigación evalúa la aplicabilidad que tiene para América Latina la supuesta asociación inversa entre estrato de ingreso y acuerdo con la reducción de brechas por medio del Estado, analizando el efecto de la desigualdad y el desarrollo económico de los paı́ses en esta relación. Para ello, se emplean modelos hı́bridos de regresión multinivel, para 4 perı́odos de tiempo y 18 naciones, controlando por caracterı́sticas relevantes tanto de los paı́ses como de las personas. Los resultados dan cuenta de las escasas diferencias entre estratos económicos, demostrándose que, al contrario de como se ha evidenciado en otras regiones del planeta, el ingreso no logra con- stituirse como un determinante esencial sobre las preferencias redistributivas para la población latinoamericana. Más que aplicar en una variedad de contextos, el autointerés sólo emerge al interior de la región en sociedades económicamente más ricas. A la luz de los resultados, se establecen comparaciones con los hallazgos de investigaciones previas en paı́ses desarrollados, discutiéndose la aplicación de teorı́as racionalistas en materia de justicia y solidaridad social al interior de las sociedades que conforman nuestra región.},
+  school = {Pontificia Universidad Católica de Chile},
+  keywords = {Guía o cotutor},
+  annotation = {url\_pdf: ""\\
+url\_dataset:  ""\\
+url\_project: ""\\
+url\_slides: ""\\
+url\_video: ""\\
+url\_poster: ""links:\\
+- icon: graduation-cap\\
+  icon\_pack: fa\\
+  name: Prof. Guía\\
+  web: /tag/guia-o-cotutor/\\
+- icon: file\\
+  icon\_pack: fa\\
+  name: Documento\\
+  web: /tesis/2019\_explorando\_la\_asocia/\#documento\\
+\\
+\\
+\\
+---\\
+\\
+\# Resumen\\
+En una región en vı́as de desarrollo y altamente desigual como América Latina,\\
+resulta trascendental la comprensión de los determinantes que afectan en el acuerdo\\
+de las personas con la redistribución de recursos. La popular hipótesis del votante\\
+mediano y las teorı́as centradas en el autointerés continuamente han establecido un\\
+vı́nculo negativo entre el ingreso de las personas y su apoyo hacia la disminución\\
+de desigualdades. A pesar de ello, la evidencia es escasa y a veces contradictoria,\\
+mientras que su testeo en Latinoamérica resulta casi inexistente. Utilizando infor-\\
+mación de la Encuesta LAPOP entre los años 2008 y 2014, junto a datos para paı́ses,\\
+esta investigación evalúa la aplicabilidad que tiene para América Latina la supuesta\\
+asociación inversa entre estrato de ingreso y acuerdo con la reducción de brechas por\\
+medio del Estado, analizando el efecto de la desigualdad y el desarrollo económico\\
+de los paı́ses en esta relación. Para ello, se emplean modelos hı́bridos de regresión\\
+multinivel, para 4 perı́odos de tiempo y 18 naciones, controlando por caracterı́sticas\\
+relevantes tanto de los paı́ses como de las personas. Los resultados dan cuenta de\\
+las escasas diferencias entre estratos económicos, demostrándose que, al contrario\\
+de como se ha evidenciado en otras regiones del planeta, el ingreso no logra con-\\
+stituirse como un determinante esencial sobre las preferencias redistributivas para\\
+la población latinoamericana. Más que aplicar en una variedad de contextos, el\\
+autointerés sólo emerge al interior de la región en sociedades económicamente más\\
+ricas. A la luz de los resultados, se establecen comparaciones con los hallazgos de\\
+investigaciones previas en paı́ses desarrollados, discutiéndose la aplicación de teorı́as\\
+racionalistas en materia de justicia y solidaridad social al interior de las sociedades\\
+que conforman nuestra región.\\
+\\
+\# Documento\\
+\\
+{$<$}iframe src="https://www.dropbox.com/scl/fi/z8k8jwq9jited5zaay1vi/Tesis\_InformeFinal\_FRANETOVIC\_CORREGIDO.pdf?raw=1" style="min-height:100vh;width:100\%" frameborder="0"{$><$}/iframe{$>$}}
+}
+
 @phdthesis{garcia_relevancia_2017,
   type = {Taller titulación - pregrado sociología},
   title = {Relevancia de la Convocatoria de Investigación en Educación del Consejo Nacional de Educación en la trayectoria académica de los finalistas adjudicados y no adjudicados de los años 2014. 2015 y 2016.},
@@ -719,6 +777,7 @@ links:\\
 \\
 ---\\
 \\
+![](/images/tesis-francisco.png)\\
 \# Resumen\\
 \\
 Actualmente se espera que la educación ciudadana sea capaz de preparar a los jóvenes para la vida democrática, no obstante, investigaciones han evidenciado brechas sociales que dificultan una efectiva preparación para la ciudadanía. Uno de los objetivos de la educación cívica es fomentar el conocimiento cívico en los estudiantes, comprendido como habilidades y saberes necesarios para la vida ciudadana. Desde la sociología de la educación se ha evidenciado que existe desigualdad social en el conocimiento cívico, lo cual significa una amenaza a la democracia y la representatividad. Al explicar esta desigualdad algunos autores han relevado el rol de las escuelas y del capital cultural de las familias. En concreto se ha señalado que tener recursos económicos y poseer libros en el hogar es un gran predictor del conocimiento cívico. Esta evidencia no permite discriminar por qué tener libros y recursos económicos fomenta el conocimiento cívico. Frente a ello, propongo que una parte importante de la desigualdad social del conocimiento cívico se explica por la desigualdad educativa, expresadas en la compresión lectora. Se trabajo con una perspectiva cuantitativa, utilizando conjuntamente los datos de la ICCS y el SIMCE (N = 3140), mediante metodologías multinivel. Los análisis respaldan la hipótesis, estudiantes con mejor comprensión lectora poseen una gran ventaja en el conocimiento cívico. Además, la evidencia señala que el efecto de los libros en el hogar se explica por el desarrollo de habilidades lingüísticas expresadas en la comprensión lectora. Esto refuerza la línea de estudio de los recursos culturales como explicación a la reproducción intergeneracional de la desigualdad política. Igualmente, pone la brecha educativa como una barrera para la implementación de la formación ciudadana en Chile.}
@@ -1138,7 +1197,7 @@ el periodo de tesis.\\
 
 @phdthesis{sandoval_merezco_2017,
   type = {Magister en Sociología},
-  title = {Merezco estar aquı́ Un estudio multinivel sobre la relación entre meritocracia y educación},
+  title = {Merezco estar aquı́: Un estudio multinivel sobre la relación entre meritocracia y educación},
   author = {Sandoval, Diego},
   year = {2017},
   address = {Santiago de Chile},
