--- a/content/publication/academic-publications.bib
+++ b/content/publication/academic-publications.bib
@@ -162,6 +162,24 @@
   file = {/home/juank/Dropbox/zoterojcydocs/storage/R5WB2644/Breznau et al. - 2022 - Observing many researchers using the same data and.pdf}
 }
 
+@incollection{carrasco_socialización_2024,
+  title = {La socialización de las actitudes hacia la desigualdad y meritocracia en la etapa escolar en chile},
+  booktitle = {America Latina desigual: Preguntas, enfoques y tendencias actuales},
+  author = {Carrasco, Kevin and {García-Castro}, Juan Diego and Castillo, Juan-Carlos},
+  editor = {Assusa, Gonzalo and Benza, Gabriela},
+  year = {2024},
+  month = jan,
+  publisher = {Siglo XXI Editores},
+  address = {Mexico},
+  abstract = {En ciencias sociales la desigualdad no es una mera subárea temática. Antes bien, resulta un gesto epistemológico constituyente de las disciplinas, un modo de preguntarse sobre la realidad y abordar problemas de investigación, así como un resultado de la propia reproducción de la vida social. En este marco, el presente libro se propone brindar un panorama de las indagaciones y miradas que han acompañado al renovado interés por la desigualdad en América Latina desde principios de siglo. Un primer conjunto de capítulos pone el foco en las características distintivas y en las transformaciones históricas y recientes de las estructuras sociales de América Latina. Un segundo bloque se centra en las experiencias, identidades, preferencias políticas y biografías desiguales en la región. Finalmente, los capítulos que se reúnen en la tercera parte del libro abordan nuevas preguntas y enfoques en torno a las desigualdades. En su conjunto, este volumen constituye un insumo fundamental para la construcción de consensos sociales y de agendas políticas que promuevan la igualdad en nuestras sociedades. La colección Miradas Latinoamericanas. Un Estado del Debate tiene como objetivo relevar las novedades teóricas, metodológicas y temáticas en diversos campos del saber, tanto a través de perspectivas trans e interdisciplinares, como desde diferentes tradiciones intelectuales. Los libros que integran esta colección reúnen trabajos que exponen las novedades y dan cuenta de las transformaciones en relación con las temáticas, abordajes, enfoques teóricos, preguntas y objetos de investigación en los campos de las ciencias sociales y las humanidades, para poner en valor la originalidad, la relevancia y el impacto del conocimiento producido desde la región},
+  isbn = {978-607-03-1388-2},
+  langid = {spanish},
+  keywords = {Social Science / Sociology / Social Theory},
+  annotation = {---\\
+[Link to pdf](/docs/carrasco-socializacion-meritocracia.pdf)\\
+![](https://m.media-amazon.com/images/I/41JN8DUE-RL.jpg)}
+}
+
 @techreport{castillo_actitudes_2014,
   type = {Temas de la Agenda Pública},
   title = {Actitudes hacia el trabajo y justicia salarial en Chile},
@@ -613,7 +631,7 @@ ISSN 0719-6660\\
   file = {/home/juank/Dropbox/zoterojcydocs/storage/B7DC4PN8/Castillo et al. - 2015 - Mitigating the political participation gap from th.pdf;/home/juank/Dropbox/zoterojcydocs/storage/8ZUKB2WF/13676261.2014.html}
 }
 
-@article{castillo_multidimensional_2023,
+@article{castillo_multidimensional_2023b,
   title = {A multidimensional approach for measuring meritocratic beliefs: advantages, limitations and alternatives to the ISSP social inequality survey},
   author = {Castillo, Juan-Carlos and Iturra, Julio and Maldonado, Luis and Atria, Jorge and Meneses, Francisco},
   year = {2023},
@@ -624,7 +642,8 @@ ISSN 0719-6660\\
   abstract = {A great part of the comparative international research that has attempted to measure meritocratic beliefs has used the social inequality module of the ISSP (International Social Survey Programme), which offers an unprecedented opportunity to compare meritocratic views in different societies. Based on a series of studies using ISSP data, the present paper proposes a multidimensional measurement framework for meritocratic beliefs. This framework dis- tinguishes, on the one side, between perceptions and preferences and, on the other side, between meritocratic and not meritocratic aspects. In the first study, we test the multidimensional framework for meritocratic beliefs using the ISSP 2009 inequality module through confirmatory factor analysis (CFA) techniques. After identify- ing the advantages and some limitations of ISSP items for a multidi- mensional operationalization of meritocratic beliefs, in a second study, we suggest a modified set of items that better taps the differ- ent dimensions of meritocracy. We examined the measuring proper- ties of this new instrument using a sample of Chilean adults (N ¼ 2,141). Based on these results, we recommend improvements in measuring meritocratic beliefs in cross-national studies.},
   annotation = {---\\
 \\
-![](https://www.tandfonline.com/doi/cover-img/10.1080/mijs20.v053.i05)}
+![](https://www.tandfonline.com/doi/cover-img/10.1080/mijs20.v053.i05)},
+  file = {/home/juank/Dropbox/zoterojcydocs/storage/FTG2TS2D/Castillo et al. - 2023 - A multidimensional approach for measuring meritocr.pdf}
 }
 
 @article{castillo_percepcion_2012,
@@ -743,7 +762,8 @@ links:\\
   name: Github\\
   web: https://github.com/jciturras/frontiers-cohesion\\
 \\
----}
+---},
+  file = {/home/juank/Dropbox/zoterojcydocs/storage/TDDUPQFC/Castillo et al. - 2023 - Social cohesion and attitudinal changes towards mi.pdf}
 }
 
 @article{castillo_son_2012,
@@ -789,9 +809,11 @@ links:\\
   shorttitle = {Aprendizaje de la ciudadanía},
   author = {Cox, Cristián and Castillo, Juan-Carlos},
   year = {2015},
+  eprint = {j.ctt1bhkq64},
+  eprinttype = {jstor},
   publisher = {Ediciones Universidad Católica de Chile},
   address = {Santiago},
-  url = {https://ediciones.uc.cl/aprendizaje-de-la-ciudadania-contextos-experiencias-y-resultados.html},
+  url = {https://www.jstor.org/stable/j.ctt1bhkq64},
   abstract = {No nacemos demócratas, aprendemos a serlo. Y es por ello que la educación representa un factor clave para promover la ciudadaní­a y el desarrollo democrático. Con educación, dice la teorí­a y la investigación, se fortalecen la cooperación y la cohesión social, y se adquieren las capacidades para procesar el conflicto. Sin educación, o con una versión magra de ella, la democracia no puede ser robusta ni crecer. ¿Estamos formando para la ciudadaní­a compleja del nuevo escenario? Esa es la pregunta que cruza el conjunto de catorce trabajos teóricos y empí­ricos que reúne este libro, que se refieren tanto a Chile como a paí­ses de Latinoamérica y el mundo desarrollado. Estas investigaciones llevadas a cabo a lo largo de tres años analizan la compleja relación entre educación, ciudadaní­a y democracia.},
   isbn = {978-956-14-1513-3},
   lccn = {323.60983},
