--- a/content/tesis/tesis.bib
+++ b/content/tesis/tesis.bib
@@ -42,7 +42,11 @@ las últimas elecciones presidenciales en Chile. Este instrumento se prefiere po
 por las temáticas especı́ficas que aborda, y porque cuenta con indicadores claves para medir\\
 el compromiso cı́vico de la manera propuesta. Además, cuenta con datos más actualizados\\
 en comparación con otras encuestas dirigidas a la juventud chilena, lo que permite visualizar\\
-los cambios ocurridos en el último tiempo (a partir de los años 2011-2012).}
+los cambios ocurridos en el último tiempo (a partir de los años 2011-2012).\\
+\\
+\# Documento\\
+\\
+{$<$}iframe src="/docs/Tacevedoversionfinal.pdf" style="min-height:100vh;width:100\%" frameborder="0"{$><$}/iframe{$>$}}
 }
 
 @phdthesis{acevedo_evaluacion_2014,
@@ -464,7 +468,7 @@ url\_poster: ""links:\\
 - icon: file\\
   icon\_pack: fa\\
   name: Documento\\
-  web: /tesis/2019\_explorando\_la\_asocia/\#documento\\
+  web: /tesis/2018\_desigualdad\_desarro/\#documento\\
 \\
 \\
 \\
@@ -497,7 +501,7 @@ que conforman nuestra región.\\
 \\
 \# Documento\\
 \\
-{$<$}iframe src="https://www.dropbox.com/scl/fi/z8k8jwq9jited5zaay1vi/Tesis\_InformeFinal\_FRANETOVIC\_CORREGIDO.pdf?raw=1" style="min-height:100vh;width:100\%" frameborder="0"{$><$}/iframe{$>$}}
+{$<$}iframe src="/docs/Tesis\_InformeFinal\_FRANETOVIC\_CORREGIDO.pdf" style="min-height:100vh;width:100\%" frameborder="0"{$><$}/iframe{$>$}}
 }
 
 @phdthesis{garcia_relevancia_2017,
@@ -934,6 +938,58 @@ url\_poster: ""links:\\
 ---}
 }
 
+@phdthesis{montedonico_balance_2018,
+  type = {Magister en Sociología},
+  title = {Balance legistlativo, adhesión al sistema político y preferencias redistributivas en américa latina},
+  author = {Montedónico, Sofía},
+  year = {2018},
+  address = {Santiago de Chile},
+  abstract = {Tradicionalmente las tendencias y partidos de izquierda se han asociado a un rol más activo del Estado en temas de redistribución. Este trabajo pretende ahondar en este punto, analizando en qué medida la composición de los parlamentos en términos de izquierda-derecha (balance legislativo) se relaciona con mayores o menores preferen- cias por redistribución por parte de la población. Los resultados del estudio demues- tran, primero, que a mayor tendencia hacia la izquierda en los aparatos legislativos, las preferencias redistributivas tienden a ser menores. En segundo lugar, la mayor adhe- sión al sistema polı́tico se asocia a un mayor grado de acuerdo con la reasignación de recursos, y por último, en paı́ses con alto número de polı́ticos de izquierda en el con- greso el efecto de la adhesión al sistema polı́tico es más grande y positivo respecto a la redistribución. Estos resultados se basan en un análisis Multinivel de Encuestas Repe- tidas con los datos de la encuesta LAPOP 2012 y 2014 para 18 paı́ses de América Latina, y muestran que la relación de las preferencias redistributivas con las caracterı́sticas del contexto polı́tico institucional son más complejas de lo que han demostrado estudios anteriores. Por todo lo anterior, se sugiere que para promover el apoyo a polı́ticas re- distributivas se debe desarrollar instituciones polı́ticas socialmente válidas y analizar los factores que están asociados a tendencia hacia la izquierda del aparato legislativo, dado que algún elemento de ello genera un desincentivo hacia la redistribución.},
+  school = {Pontificia Universidad Católica de Chile},
+  keywords = {Guía o cotutor},
+  annotation = {url\_pdf: ""\\
+url\_dataset:  ""\\
+url\_project: ""\\
+url\_slides: ""\\
+url\_video: ""\\
+url\_poster: ""links:\\
+- icon: graduation-cap\\
+  icon\_pack: fa\\
+  name: Prof. Guía\\
+  web: /tag/guia-o-cotutor/\\
+- icon: file\\
+  icon\_pack: fa\\
+  name: Documento\\
+  web: /tesis/2018\_balance\_legistlativo/\#documento\\
+\\
+\\
+\\
+---\\
+\\
+\# ResumenTradicionalmente las tendencias y partidos de izquierda se han asociado a un rol más\\
+activo del Estado en temas de redistribución. Este trabajo pretende ahondar en este\\
+punto, analizando en qué medida la composición de los parlamentos en términos de\\
+izquierda-derecha (balance legislativo) se relaciona con mayores o menores preferen-\\
+cias por redistribución por parte de la población. Los resultados del estudio demues-\\
+tran, primero, que a mayor tendencia hacia la izquierda en los aparatos legislativos, las\\
+preferencias redistributivas tienden a ser menores. En segundo lugar, la mayor adhe-\\
+sión al sistema polı́tico se asocia a un mayor grado de acuerdo con la reasignación de\\
+recursos, y por último, en paı́ses con alto número de polı́ticos de izquierda en el con-\\
+greso el efecto de la adhesión al sistema polı́tico es más grande y positivo respecto a la\\
+redistribución. Estos resultados se basan en un análisis Multinivel de Encuestas Repe-\\
+tidas con los datos de la encuesta LAPOP 2012 y 2014 para 18 paı́ses de América Latina,\\
+y muestran que la relación de las preferencias redistributivas con las caracterı́sticas del\\
+contexto polı́tico institucional son más complejas de lo que han demostrado estudios\\
+anteriores. Por todo lo anterior, se sugiere que para promover el apoyo a polı́ticas re-\\
+distributivas se debe desarrollar instituciones polı́ticas socialmente válidas y analizar\\
+los factores que están asociados a tendencia hacia la izquierda del aparato legislativo,\\
+dado que algún elemento de ello genera un desincentivo hacia la redistribución.\\
+\\
+\# Documento\\
+\\
+{$<$}iframe src="/docs/Tesis\_SMontedónicoG.pdf" style="min-height:100vh;width:100\%" frameborder="0"{$><$}/iframe{$>$}}
+}
+
 @phdthesis{munoz_formacion_2017,
   type = {Taller titulación - pregrado sociología},
   title = {La Formación Continua en Docencia del Profesorado Universitario Efectos sobre la práctica y autopercepción docente},
@@ -1036,6 +1092,48 @@ url\_poster: ""links:\\
 ---}
 }
 
+@phdthesis{placencio-castro_legitimidad_2016,
+  type = {Magister en Sociología},
+  title = {Legitimidad del sistema económico y participación ciudadana: Una aproximación a la relación entre percepciones individuales y actividad política en chile},
+  author = {{Placencio-Castro}, Matias},
+  year = {2016},
+  address = {Santiago de Chile},
+  abstract = {Este estudio investiga la relación entre las percepciones individuales sobre la legitimidad del sistema económico y la participación política en Chile. A través de un enfoque sociológico, se analiza cómo las opiniones sobre la distribución de recompensas en la sociedad influyen en las acciones políticas de los ciudadanos. Se emplea la teoría de la equidad y la justicia procedimental como marcos conceptuales para comprender este fenómeno. Los datos utilizados provienen del Estudio Nacional sobre el Conflicto y la Cohesión Social en Chile, realizado por el Centro de Estudios del Conflicto y la Cohesión Social (COES) en 2014. La muestra incluyó a 2,025 personas de 18 a 75 años residentes en 22 ciudades de Chile, con un error muestral del 2.2\% bajo un supuesto de Muestreo Aleatorio Simple. El análisis se basa en datos empíricos recopilados mediante el Análisis de Clases Latentes, que permiten identificar perfiles de participación y explorar la diversificación del repertorio político en la ciudadanía chilena. Se destaca la importancia de considerar la educación y los ingresos como factores que pueden influir en las percepciones de deprivación relativa y, por ende, en la motivación para la acción política. Los resultados preliminares sugieren que las percepciones sobre la legitimidad del sistema económico juegan un papel significativo en el comportamiento político de los individuos, especialmente en un contexto de crisis de representatividad y distanciamiento entre la política partidista y la ciudadanía común. Se plantea la necesidad de profundizar en la comprensión de estos mecanismos para abordar los desafíos actuales en materia de participación política y legitimidad institucional en Chile.},
+  school = {Pontificia Universidad Católica de Chile},
+  keywords = {Guía o cotutor},
+  annotation = {url\_pdf: ""\\
+url\_dataset:  ""\\
+url\_project: ""\\
+url\_slides: ""\\
+url\_video: ""\\
+url\_poster: ""links:\\
+- icon: graduation-cap\\
+  icon\_pack: fa\\
+  name: Prof. Guía\\
+  web: /tag/guia-o-cotutor/\\
+- icon: file\\
+  icon\_pack: fa\\
+  name: Documento\\
+  web: /tesis/2016\_legitimidad\_del\_sist/\#documento\\
+\\
+\\
+\\
+---\\
+\\
+\# Resumen\\
+Este estudio investiga la relación entre las percepciones individuales sobre la legitimidad del sistema económico y la participación política en Chile. A través de un enfoque sociológico, se analiza cómo las opiniones sobre la distribución de recompensas en la sociedad influyen en las acciones políticas de los ciudadanos. Se emplea la teoría de la equidad y la justicia procedimental como marcos conceptuales para comprender este fenómeno.\\
+\\
+Los datos utilizados provienen del Estudio Nacional sobre el Conflicto y la Cohesión Social en Chile, realizado por el Centro de Estudios del Conflicto y la Cohesión Social (COES) en 2014. La muestra incluyó a 2,025 personas de 18 a 75 años residentes en 22 ciudades de Chile, con un error muestral del 2.2\% bajo un supuesto de Muestreo Aleatorio Simple.\\
+\\
+El análisis se basa en datos empíricos recopilados mediante el Análisis de Clases Latentes, que permiten identificar perfiles de participación y explorar la diversificación del repertorio político en la ciudadanía chilena. Se destaca la importancia de considerar la educación y los ingresos como factores que pueden influir en las percepciones de deprivación relativa y, por ende, en la motivación para la acción política.\\
+\\
+Los resultados preliminares sugieren que las percepciones sobre la legitimidad del sistema económico juegan un papel significativo en el comportamiento político de los individuos, especialmente en un contexto de crisis de representatividad y distanciamiento entre la política partidista y la ciudadanía común. Se plantea la necesidad de profundizar en la comprensión de estos mecanismos para abordar los desafíos actuales en materia de participación política y legitimidad institucional en Chile.\\
+\\
+\# Documento\\
+\\
+{$<$}iframe src="/docs/FinalCorregidaAgosto2016.pdf" style="min-height:100vh;width:100\%" frameborder="0"{$><$}/iframe{$>$}}
+}
+
 @phdthesis{plaza_intereses_2019,
   type = {Magister en Sociología},
   title = {Intereses fluidos: Movilidad social y preferencias por la redistribución en 37 países.},
@@ -1117,6 +1215,10 @@ links:\\
   icon\_pack: fa\\
   name: Prof. Guía\\
   web: /tag/guia-o-cotutor/\\
+- icon: file\\
+  icon\_pack: fa\\
+  name: Documento\\
+  web: /tesis/2024\_el\_rol\_de\_la\_sociali/\#documento\\
 \\
 ---\\
 \\
@@ -1142,7 +1244,9 @@ justo de los profesores en la escuela. Asimismo, se aporta con evidencia de que 
 estatus social familiar como el escolar, cumplen un rol en la formación de las\\
 percepciones de meritocracia en las notas. Estos resultados sugieren que tanto la familia\\
 como la escuela cumplen un rol de socialización, aunque de forma distinta entre la\\
-importancia del esfuerzo y la importancia del talento para obtener buenas notas.}
+importancia del esfuerzo y la importancia del talento para obtener buenas notas.\\
+\\
+{$<$}iframe src="/docs/retamales.pdf" style="min-height:100vh;width:100\%" frameborder="0"{$><$}/iframe{$>$}}
 }
 
 @phdthesis{rojas_dimension_2018,
@@ -1246,6 +1350,83 @@ modera la relación entre edad y las variables dependientes.\\
 {$<$}iframe src="https://www.dropbox.com/s/hd34jusmqum3lb1/Tesis\%20Diego\%20Sandoval.pdf?raw=1" style="min-height:100vh;width:100\%" frameborder="0"{$><$}/iframe{$>$}}
 }
 
+@phdthesis{santander_qué_2015,
+  type = {Magister en Sociología},
+  title = {¿Qué puede hacer la cultura de la escuela para aumentar la participación política de sus estudiantes? Un estudio exploratorio sobre el rol del liderazgo distribuido y el compromiso organizacional docente en escuelas chilenas},
+  author = {Santander, Eduardo},
+  year = {2015},
+  address = {Santiago de Chile},
+  abstract = {Varios autores han reconocido la importancia estratégica de la educación cívica en el fortalecimiento de las democracias modernas y la centralidad de la institución escolar como órgano fundamental en el proceso de alfabetización cívica y política de las nuevas generaciones. Generalmente, el acento se ha puesto o en las características de un currículo democrático; o en el modelaje de didácticas de aula que favorecerían la formación de disposiciones pro-cívicas, pero poco se ha dicho sobre si la cultura de la escuela (esto es, sus prácticas y rutinas institucionales) tendría algún relación con el mejoramiento de las capacidades y destrezas cívicas de los estudiantes. Asimismo, nuevas conceptualizaciones de liderazgo escolar, como el liderazgo distribuido, han desafiado la visión gerencialista de la gestión escolar, lo que invita a evaluar su eficacia en la mejora de las habilidades cívicas de los estudiantes. El liderazgo distribuido supone el ejercicio de un estilo más descentralizado de gobierno institucional, en donde profesores destacados y otros miembros relevantes de la comunidad escolar asumen un rol más protagónico en la toma de decisiones sobre temas relativos a la dirección de la escuela. Asimismo, uno de los grandes retos que, en la actualidad, enfrentan las instituciones de educación escolar, es el de crear estrategias útiles para que los docentes se comprometan con los objetivos organizacionales y se integren activamente en los proyectos institucionales en el largo plazo. A partir de los datos informados por el Estudio Internacional de Educación Cívica y Formación Ciudadana (2009) para Chile, busca evaluar el rol del liderazgo distribuido de los directores y del compromiso organizacional docente de los profesores en la mejora de las habilidades cívicas de los estudiantes, considerando sus expresiones tanto manifiestas (medibles y observables) como latentes (potencialmente traducibles en formas manifiestas). Los resultados, obtenidos a partir de la estimación de modelos multinivel, exhiben que ni el compromiso organizacional docente ni el liderazgo distribuido se asocian con mayores expectativas de participación política, ni latente ni manifiesta. Si bien los parámetros son positivos, la relación no es estadísticamente significativa a niveles convencionales. Sin embargo, la participación política latente y manifiesta sí es significativa y positiva para las variables individuales de participación y valoración del involucramiento en la toma de decisiones de la escuela, lo que presta apoyo empírico a la hipótesis de que los estudiantes, más que aprender implícitamente sobre ciudadanía a partir de rutinas organizacionales de mayor horizontalidad, aprenden en el marco de un ejercicio cotidiano y sistemático de ciudadanía al interior de sus contextos socializantes. La socialización política, por ende, se constituye en un proceso de práctica individual de la democracia y no por asociación con figuras de autoridad. La investigación, asimismo, reafirma el núcleo conceptual presente en el relato sobre ciudadanía adscrito a las reformas curriculares sancionadas en la década del 2000 en Chile, en el sentido de un sello en la educación ciudadana como parte integral del proceso formativo de la escuela, que excede un aprendizaje meramente cognitivo y que se proyecta y actualiza en los espacios institucionales de deliberación y participación política. Finalmente, el autor entrega valiosa evidencia descriptiva sobre el comportamiento del liderazgo distribuido y del compromiso organizacional en las escuelas chilenas.},
+  school = {Pontificia Universidad Católica de Chile},
+  keywords = {Guía o cotutor},
+  annotation = {url\_pdf: ""\\
+url\_dataset:  ""\\
+url\_project: ""\\
+url\_slides: ""\\
+url\_video: ""\\
+url\_poster: ""links:\\
+- icon: graduation-cap\\
+  icon\_pack: fa\\
+  name: Prof. Guía\\
+  web: /tag/guia-o-cotutor/\\
+- icon: file\\
+  icon\_pack: fa\\
+  name: Documento\\
+  web: /tesis/2015\_que\_puede\_hacer\_la\_/\#documento\\
+\\
+\\
+\\
+---\\
+\\
+\# Resumen\\
+Varios autores han reconocido la importancia estratégica de la educación cívica en el\\
+fortalecimiento de las democracias modernas y la centralidad de la institución escolar\\
+como órgano fundamental en el proceso de alfabetización cívica y política de las nuevas\\
+generaciones. Generalmente, el acento se ha puesto o en las características de un\\
+currículo democrático; o en el modelaje de didácticas de aula que favorecerían la\\
+formación de disposiciones pro-cívicas, pero poco se ha dicho sobre si la cultura de la\\
+escuela (esto es, sus prácticas y rutinas institucionales) tendría algún relación con el\\
+mejoramiento de las capacidades y destrezas cívicas de los estudiantes. Asimismo,\\
+nuevas conceptualizaciones de liderazgo escolar, como el liderazgo distribuido, han\\
+desafiado la visión gerencialista de la gestión escolar, lo que invita a evaluar su eficacia\\
+en la mejora de las habilidades cívicas de los estudiantes. El liderazgo distribuido\\
+supone el ejercicio de un estilo más descentralizado de gobierno institucional, en donde\\
+profesores destacados y otros miembros relevantes de la comunidad escolar asumen un\\
+rol más protagónico en la toma de decisiones sobre temas relativos a la dirección de la\\
+escuela. Asimismo, uno de los grandes retos que, en la actualidad, enfrentan las\\
+instituciones de educación escolar, es el de crear estrategias útiles para que los docentes\\
+se comprometan con los objetivos organizacionales y se integren activamente en los\\
+proyectos institucionales en el largo plazo. A partir de los datos informados por el\\
+Estudio Internacional de Educación Cívica y Formación Ciudadana (2009) para Chile,\\
+busca evaluar el rol del liderazgo distribuido de los directores y del compromiso\\
+organizacional docente de los profesores en la mejora de las habilidades cívicas de los\\
+estudiantes, considerando sus expresiones tanto manifiestas (medibles y observables)\\
+como latentes (potencialmente traducibles en formas manifiestas).\\
+Los resultados, obtenidos a partir de la estimación de modelos multinivel, exhiben que\\
+ni el compromiso organizacional docente ni el liderazgo distribuido se asocian con\\
+mayores expectativas de participación política, ni latente ni manifiesta. Si bien los\\
+parámetros son positivos, la relación no es estadísticamente significativa a niveles\\
+convencionales. Sin embargo, la participación política latente y manifiesta sí es\\
+significativa y positiva para las variables individuales de participación y valoración del\\
+involucramiento en la toma de decisiones de la escuela, lo que presta apoyo empírico a\\
+la hipótesis de que los estudiantes, más que aprender implícitamente sobre ciudadanía\\
+a partir de rutinas organizacionales de mayor horizontalidad, aprenden en el marco de\\
+un ejercicio cotidiano y sistemático de ciudadanía al interior de sus contextos\\
+socializantes. La socialización política, por ende, se constituye en un proceso de práctica\\
+individual de la democracia y no por asociación con figuras de autoridad. La\\
+investigación, asimismo, reafirma el núcleo conceptual presente en el relato sobre\\
+ciudadanía adscrito a las reformas curriculares sancionadas en la década del 2000 en\\
+Chile, en el sentido de un sello en la educación ciudadana como parte integral del proceso\\
+formativo de la escuela, que excede un aprendizaje meramente cognitivo y que se\\
+proyecta y actualiza en los espacios institucionales de deliberación y participación\\
+política. Finalmente, el autor entrega valiosa evidencia descriptiva sobre el\\
+comportamiento del liderazgo distribuido y del compromiso organizacional en las\\
+escuelas chilenas.\\
+\# Documento\\
+\\
+{$<$}iframe src="/docs/SantanderTesisVersionFinal.pdf" style="min-height:100vh;width:100\%" frameborder="0"{$><$}/iframe{$>$}}
+}
+
 @phdthesis{tapia_bienestar_2022,
   type = {Licenciatura en Sociología},
   title = {Bienestar, trabajo doméstico y uso del tiempo: un análisis cuantitativo del bienestar de las mujeres en Chile},
@@ -1282,6 +1463,68 @@ La pregunta que guía esta investigación es: ¿en qué medida repercute la carg
 Los resultados indican que la satisfacción con la vida se ve influenciada mayoritariamente por los ingresos, donde las mujeres de mayores ingresos dedican menos cantidad de horas al trabajo doméstico y gozan de mayor bienestar. A su vez, un hallazgo relevante para la medición de la satisfacción con la vida es que la satisfacción con el uso del tiempo determina en gran medida el bienestar.\\
 \\
 Palabras clave: Bienestar, satisfacción con la vida, carga doméstica, trabajo doméstico, tiempo.}
+}
+
+@phdthesis{torres_aspectos_2015,
+  type = {Magister en Psicología Social Comunitaria},
+  title = {Aspectos subjetivos de la meritocracia y su relación con la percepción de la desigualdad en Chile},
+  author = {Torres, Alex},
+  year = {2015},
+  address = {Santiago de Chile},
+  abstract = {La desigualdad es señalada como uno de los principales riesgos para la estabilidad de las democracias. Chile es un caso peculiar, ya que a pesar de ser uno de los países con mayores niveles de desigualdad (índice GINI, por ejemplo) no presenta gran inestabilidad. En este contexto, se hace relevante estudiar los mecanismos a nivel psicológico que permitirían justificar la desigualdad de las sociedades, siendo la meritocracia una de las principales estrategias de las sociedades democráticas en la legitimación de las desigualdades sociales. El presente estudio de carácter cuantitativo no experimental, transversal y correlacional, propone medir la meritocracia diferenciando dos dimensiones: percepción y creencia meritocrática, e identificar en qué grado elementos de estatus individual (subjetivo, ingreso per cápita familiar y nivel educacional) se relacionan con cada dimensión, y la relación de ambas dimensiones con la percepción de la desigualdad salarial. Se utilizaron los datos del proyecto Fondecyt “Desigualdad, Justicia Social y Participación Ciudadana”, constituidos por 1.245 casos obtenidos mediante un muestreo probabilístico estratificado en 4 etapas (comunas, manzanas, vivienda, habitante). El modelo de medición de la meritocracia, así como la relación de ésta con los elementos individuales de estatus y desigualdad, fueron estimados mediante ecuaciones estructurales. Los resultados del estudio señalan que existe un funcionamiento diferenciado entre percepción y creencia en la meritocracia, que implica que estos debiesen distinguirse cada vez que se mida la meritocracia. Además, se observa que percepción y creencia meritocrática se asocian de forma distinta a los elementos individuales considerados en el modelo de este estudio: la percepción se encuentra influida por el estatus subjetivo y por el nivel educacional (de forma inversa), mientras que la creencia no se asocia a los elementos considerados en el modelo. Respecto de la desigualdad, se observa que la meritocracia funcionaria como una estrategia legitimadora, por un lado, al asociarse a la percepción de menores niveles de desigualdad (percepción) y, por otro, a desear mayores brechas salariales entre ocupaciones de alto y bajo estatus (creencia).},
+  school = {Pontificia Universidad Católica de Chile},
+  keywords = {Guía o cotutor},
+  annotation = {url\_pdf: ""\\
+url\_dataset:  ""\\
+url\_project: ""\\
+url\_slides: ""\\
+url\_video: ""\\
+url\_poster: ""links:\\
+- icon: graduation-cap\\
+  icon\_pack: fa\\
+  name: Prof. Guía\\
+  web: /tag/guia-o-cotutor/\\
+- icon: file\\
+  icon\_pack: fa\\
+  name: Documento\\
+  web: /tesis/2015\_aspectos\_subjetivos\_/\#documento\\
+\\
+\\
+\\
+---\\
+\\
+\# Resumen\\
+La desigualdad es señalada como uno de los principales riesgos para la\\
+estabilidad de las democracias. Chile es un caso peculiar, ya que a pesar de ser uno de\\
+los países con mayores niveles de desigualdad (índice GINI, por ejemplo) no presenta\\
+gran inestabilidad. En este contexto, se hace relevante estudiar los mecanismos a nivel\\
+psicológico que permitirían justificar la desigualdad de las sociedades, siendo la\\
+meritocracia una de las principales estrategias de las sociedades democráticas en la\\
+legitimación de las desigualdades sociales.\\
+El presente estudio de carácter cuantitativo no experimental, transversal y\\
+correlacional, propone medir la meritocracia diferenciando dos dimensiones: percepción\\
+y creencia meritocrática, e identificar en qué grado elementos de estatus individual\\
+(subjetivo, ingreso per cápita familiar y nivel educacional) se relacionan con cada\\
+dimensión, y la relación de ambas dimensiones con la percepción de la desigualdad\\
+salarial. Se utilizaron los datos del proyecto Fondecyt “Desigualdad, Justicia Social y\\
+Participación Ciudadana”, constituidos por 1.245 casos obtenidos mediante un muestreo\\
+probabilístico estratificado en 4 etapas (comunas, manzanas, vivienda, habitante). El\\
+modelo de medición de la meritocracia, así como la relación de ésta con los elementos\\
+individuales de estatus y desigualdad, fueron estimados mediante ecuaciones\\
+estructurales.\\
+Los resultados del estudio señalan que existe un funcionamiento diferenciado\\
+entre percepción y creencia en la meritocracia, que implica que estos debiesen\\
+distinguirse cada vez que se mida la meritocracia. Además, se observa que percepción y\\
+creencia meritocrática se asocian de forma distinta a los elementos individuales\\
+considerados en el modelo de este estudio: la percepción se encuentra influida por el\\
+estatus subjetivo y por el nivel educacional (de forma inversa), mientras que la creencia\\
+no se asocia a los elementos considerados en el modelo. Respecto de la desigualdad, se\\
+observa que la meritocracia funcionaria como una estrategia legitimadora, por un lado,\\
+al asociarse a la percepción de menores niveles de desigualdad (percepción) y, por otro,\\
+a desear mayores brechas salariales entre ocupaciones de alto y bajo estatus (creencia).\\
+\# Documento\\
+\\
+{$<$}iframe src="/docs/TesisAlexTorresMeritocracia.pdf" style="min-height:100vh;width:100\%" frameborder="0"{$><$}/iframe{$>$}}
 }
 
 @phdthesis{urrutia_determinantes_2022,
@@ -1423,6 +1666,56 @@ El estudio de las justificaciones de la violencia distingue si esta se ejerce po
 A partir de una muestra de 711 casos de los datos del Estudio Longitudinal Social de Chile (ELSOC) se pusieron a prueba cuatro hipótesis. Por un lado, que quienes evaluarán la distribución de ingresos como más injusta tenderían a justificar más la violencia por el cambio social y menos por el control social. Por otro lado, que individuos que pertenecen a grupos desaventajados justificarían más la violencia por el cambio social y menos por el control social, en la medida que aumentaran sus evaluaciones de injusticia. Para probar las hipótesis se utilizaron modelos de regresión logística ordinal para tres situaciones de violencia: que estudiantes tiren piedras a carabineros, que carabineros repriman marchas pacificas y que carabineros desalojen tomas a la fuerza. Para cada una de estas situaciones, se indagó en el efecto que tenían tres tipos de evaluaciones de injusticia: las evaluaciones que hacen los entrevistados sobre sus ingresos, las evaluaciones para los ingresos de un obrero hipotético y las evaluaciones para los ingresos de un gerente hipotético.\\
 \\
 Los resultados mostraron evidencia para el primer par de hipótesis y evidencia contraria para el segundo par de hipótesis. Para el primer par de hipótesis, se encontró que quienes evalúan más injusticia en los ingresos de los gerentes justifican más la violencia por el cambio social y que quienes evalúan menos injusticia en los ingresos de los obreros justifican más la violencia por el control social. Se discuten las particularidades de cada hallazgo, así como también el rol de los determinantes relevantes según la literatura (e.g. ideología). Para el segundo par de hipótesis, se encontró que las evaluaciones de injusticia tenían un efecto atenuante en que individuos de grupos desaventajados justificarán más la violencia por el cambio social y menos la violencia por el control social. Se abordan estos hallazgos contrarios en las discusiones.}
+}
+
+@phdthesis{viertel_medición_2016,
+  type = {Magister en Medición},
+  title = {Medición en ciudadanía: Equivalencia y propiedades psicométricas de una escala de percepción en estudiantes},
+  author = {Viertel, Federico},
+  year = {2016},
+  address = {Santiago de Chile},
+  abstract = {En las últimas décadas se ha renovado la investigación relativa al rol que puede asumir la educación cívica en el fortalecimiento de las democracias latinoamericanas. Las mediciones realizadas a gran escala, como ICCS 2009, aportan datos importantes sobre conocimiento cívico y ciudadanía de estudiantes y escuelas, incluyendo el modo cómo implementan la educación cívica, acorde con el currículo definido por cada sistema educativo. Las particularidades de los currículos, así como diferencias culturales entre los países, imponen que las comparaciones a partir de mediciones, requieran instrumentos probados en distintos niveles de equivalencia de medida para evitar sesgo. El presente estudio evalúa la invarianza de medición de una escala de ciudadanía entre países de latinoamérica participantes del ICCS 2009, y entre escuelas de la región que implementan la asignatura de educación cívica o no. Los resultados indican que las comparaciones entre países no pueden realizarse sin asumir un importante nivel de sesgo, mientras que la evaluación de invarianza entre escuelas que implementan educacion civica o no, se logra en su nivel más estricto. Se discuten aspectos metodológicos de las posibles fuentes de sesgo.},
+  school = {Pontificia Universidad Católica de Chile},
+  keywords = {Guía o cotutor},
+  annotation = {url\_pdf: ""\\
+url\_dataset:  ""\\
+url\_project: ""\\
+url\_slides: ""\\
+url\_video: ""\\
+url\_poster: ""links:\\
+- icon: graduation-cap\\
+  icon\_pack: fa\\
+  name: Prof. Guía\\
+  web: /tag/guia-o-cotutor/\\
+- icon: file\\
+  icon\_pack: fa\\
+  name: Documento\\
+  web: /tesis/2016\_medicion\_en\_ciudadan/\#documento\\
+\\
+\\
+\\
+---\\
+\\
+\# Resumen\\
+En las últimas décadas se ha renovado la investigación relativa al rol que puede asumir\\
+la educación cívica en el fortalecimiento de las democracias latinoamericanas. Las\\
+mediciones realizadas a gran escala, como ICCS 2009, aportan datos importantes sobre\\
+conocimiento cívico y ciudadanía de estudiantes y escuelas, incluyendo el modo cómo\\
+implementan la educación cívica, acorde con el currículo definido por cada sistema\\
+educativo. Las particularidades de los currículos, así como diferencias culturales entre\\
+los países, imponen que las comparaciones a partir de mediciones, requieran\\
+instrumentos probados en distintos niveles de equivalencia de medida para evitar sesgo.\\
+El presente estudio evalúa la invarianza de medición de una escala de ciudadanía entre\\
+países de latinoamérica participantes del ICCS 2009, y entre escuelas de la región que\\
+implementan la asignatura de educación cívica o no. Los resultados indican que las\\
+comparaciones entre países no pueden realizarse sin asumir un importante nivel de\\
+sesgo, mientras que la evaluación de invarianza entre escuelas que implementan\\
+educacion civica o no, se logra en su nivel más estricto. Se discuten aspectos\\
+metodológicos de las posibles fuentes de sesgo.\\
+\\
+\# Documento\\
+\\
+{$<$}iframe src="/docs/trabajo de grado II\_viertel\_corregido.pdf" style="min-height:100vh;width:100\%" frameborder="0"{$><$}/iframe{$>$}}
 }
 
 @phdthesis{villarroel_stability_2014,
